--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,9 +7,7 @@ sites:
   - name: Andika Rekatias
     url: https://andikarekatias.com
   - name: Mediakepri
-    url: https://mediakepri.co.id
-    headers:
-      - "User-Agent: <name> uptime"
+    url: https://mediakepri.co
   - name: Beritabatam
     url: https://beritabatam.com
   - name: Meutiaranews
