--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,6 +8,8 @@ sites:
     url: https://andikarekatias.com
   - name: Mediakepri
     url: https://mediakepri.co.id
+    expectedStatusCodes:
+      - 200
   - name: Beritabatam
     url: https://beritabatam.com
   - name: Meutiaranews
